<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    android:orientation="vertical"
    tools:context="com.doanjava.nhantam.wifidoctor.settings.SettingsActivity">

    <LinearLayout
        android:background="@color/color_status_bar"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:padding="@dimen/dp15"
            android:src="@drawable/ic_back"
            android:id="@+id/rippleBackSettings"
            android:layout_width="@dimen/dp50"
            android:layout_height="match_parent" />
        <com.doanjava.nhantam.wifidoctor.custom.WDTextView
            android:gravity="center_vertical"
            app:fontTypeFaceName="Lato-Regular.ttf"
            android:textSize="@dimen/sp18"
            android:textColor="@color/color_white"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_weight="11"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/realtime_protection"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtRealTimeProtection"
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/on"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkRealTimeProtection"
                android:layout_marginRight="@dimen/sp20"
                android:checked="true"
                android:textColorHighlight="@color/color_status_bar"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/wif_detection_remainder"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtWFDetection"
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/on"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkWFDetection"
                android:layout_marginRight="@dimen/sp20"
                android:checked="true"
                android:textColorHighlight="@color/color_status_bar"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/wifi_boost_remainder"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtWFBoost"
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/on"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkWFBoost"
                android:layout_marginRight="@dimen/sp20"
                android:checked="true"
                android:textColorHighlight="@color/color_status_bar"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_notification"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtWeather"
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/on"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkWeather"
                android:layout_marginRight="@dimen/sp20"
                android:checked="true"
                android:textColorHighlight="@color/color_status_bar"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/supper_boost"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/txtSuperBoost"
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/on"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkSuperBoost"
                android:layout_marginRight="@dimen/sp20"
                android:checked="true"
                android:textColorHighlight="@color/color_status_bar"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/language"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <TextView
                    android:textSize="@dimen/sp15"
                    android:gravity="top"
                    android:textColor="@android:color/darker_gray"
                    android:text="English"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/update"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingLeft="@dimen/dp20"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/sp15"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/about"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
