<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/bg_main"
    tools:context="com.doanjava.nhantam.wifidoctor.main.MainActivity">

    <!-- Toolbar 1 -->
    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.doanjava.nhantam.wifidoctor.custom.WDTextView
            android:paddingLeft="@dimen/dp20"
            android:textColor="@color/color_text"
            app:fontTypeFaceName="Lato-Bold.ttf"
            android:textSize="@dimen/sp20"
            android:gravity="center_vertical"
            android:text="@string/wifi_doctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.andexert.library.RippleView
            android:layout_gravity="right"
            android:layout_width="@dimen/dp50"
            android:layout_height="match_parent">
            <ImageView
                android:padding="@dimen/dp15"
                android:src="@drawable/ic_option_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:layout_marginRight="@dimen/dp50"
            android:layout_gravity="right"
            android:layout_width="@dimen/dp50"
            android:layout_height="match_parent">
            <ImageView
                android:padding="@dimen/dp8"
                android:src="@drawable/ic_gift_ads"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.andexert.library.RippleView>
    </FrameLayout>
    <!-- Body 6 -->
    <FrameLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.skyfishjy.library.RippleBackground
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp20"
            android:id="@+id/content"
            app:rb_color="@color/color_ripple"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_duration="5000"
            app:rb_scale="6">
            <ImageView
                android:id="@+id/imgCircleGrandient"
                android:padding="@dimen/dp80"
                android:src="@drawable/circle_disconnect"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.skyfishjy.library.RippleBackground>
        <LinearLayout
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v4.widget.Space
                android:layout_weight="7.5"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <LinearLayout
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                    android:id="@+id/txtNetwork"
                    android:visibility="visible"
                    app:fontTypeFaceName="Lato-Regular.ttf"
                    android:textSize="@dimen/sp18"
                    android:gravity="center"
                    android:text=""
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                        android:id="@+id/txtOpenWifi"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/sp15"
                        android:paddingLeft="@dimen/dp15"
                        android:paddingRight="@dimen/dp15"
                        android:paddingTop="@dimen/dp5"
                        android:paddingBottom="@dimen/dp5"
                        android:background="@drawable/bg_textview"
                        android:textColor="@color/color_text"
                        android:text="@string/open_wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <FrameLayout
                        android:id="@+id/layoutDeviceConnected"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                            app:fontTypeFaceName="Lato-Regular.ttf"
                            android:textColor="@color/color_text"
                            android:textSize="@dimen/sp15"
                            android:gravity="center_horizontal"
                            android:text="3 devices are sharing network"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <!-- Footer 3 -->
    <FrameLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginBottom="@dimen/dp15"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp130">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:weightSum="6"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgDetect"
                    android:layout_weight="3"
                    android:padding="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp10"
                    android:src="@drawable/ic_shield_active"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                    android:id="@+id/txtDetect"
                    app:fontTypeFaceName="Lato-Regular.ttf"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    android:text="@string/detect"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp15"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                    android:id="@+id/txtLastDetect"
                    app:fontTypeFaceName="Lato-Light.ttf"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Last 1 day agos"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:weightSum="6"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgBoost"
                    android:layout_weight="3"
                    android:padding="@dimen/dp5"
                    android:layout_marginBottom="@dimen/dp10"
                    android:src="@drawable/ic_rocket_active"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                    android:id="@+id/txtBoost"
                    app:fontTypeFaceName="Lato-Regular.ttf"
                    android:gravity="center"
                    android:layout_weight="1.5"
                    android:text="@string/boost"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp15"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
                <com.doanjava.nhantam.wifidoctor.custom.WDTextView
                    android:id="@+id/txtCountAppsConnected"
                    app:fontTypeFaceName="Lato-Light.ttf"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="5 apps connected"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
